{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 167,
  "lineage": "258cea64-000d-c2a1-f760-08f9d994d645",
  "resources": [
    {
      "module": "module.aks",
      "mode": "data",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/backendAddressPools/testBackendPool",
                "ip_addresses": [],
                "name": "testBackendPool"
              }
            ],
            "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/appgw-api"
                ],
                "type": "UserAssigned"
              }
            ],
            "location": "eastus",
            "name": "testAppGateway",
            "resource_group_name": "test-neyo-rg-nrg",
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.appgw",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.224.0.0/12"
            ],
            "guid": "172e8ad6-a5b6-4ad7-8585-ee4bd7edbb0d",
            "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/virtualNetworks/aks-vnet-77731381",
            "location": "eastus",
            "name": "aks-vnet-77731381",
            "resource_group_name": "test-neyo-rg-nrg",
            "subnets": [
              "aks-subnet"
            ],
            "vnet_peerings": {
              "AKStoAppGWVnetPeering": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/virtualNetworks/AppGwVnet"
            },
            "vnet_peerings_addresses": [
              "10.21.0.0/16"
            ]
          }
        }
      ]
    },
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/backendAddressPools/testBackendPool",
                "ip_addresses": [],
                "name": "testBackendPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/backendHttpSettingsCollection/myHTTPsetting",
                "name": "myHTTPsetting",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/frontendIPConfigurations/myAGIPConfig",
                "name": "myAGIPConfig",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/publicIPAddresses/testAGPublicIPAddress",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/frontendPorts/myFrontendPort",
                "name": "myFrontendPort",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/gatewayIPConfigurations/test-gateway-ip-configuration",
                "name": "test-gateway-ip-configuration",
                "subnet_id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/virtualNetworks/AppGwVnet/subnets/frontAGSubnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/frontendIPConfigurations/myAGIPConfig",
                "frontend_ip_configuration_name": "myAGIPConfig",
                "frontend_port_id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/frontendPorts/myFrontendPort",
                "frontend_port_name": "myFrontendPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/httpListeners/myListener",
                "name": "myListener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/appgw-api"
                ],
                "type": "UserAssigned"
              }
            ],
            "location": "eastus",
            "name": "testAppGateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/backendAddressPools/testBackendPool",
                "backend_address_pool_name": "testBackendPool",
                "backend_http_settings_id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/backendHttpSettingsCollection/myHTTPsetting",
                "backend_http_settings_name": "myHTTPsetting",
                "http_listener_id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/httpListeners/myListener",
                "http_listener_name": "myListener",
                "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/applicationGateways/testAppGateway/requestRoutingRules/myRoutingRule",
                "name": "myRoutingRule",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "test-neyo-rg-nrg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.appgw.azurerm_public_ip.pip",
            "module.appgw.azurerm_subnet.frontend",
            "module.appgw.azurerm_user_assigned_identity.main",
            "module.appgw.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/publicIPAddresses/testAGPublicIPAddress",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.173.134.187",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "testAGPublicIPAddress",
            "resource_group_name": "test-neyo-rg-nrg",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.21.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/virtualNetworks/AppGwVnet/subnets/frontAGSubnet",
            "name": "frontAGSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-neyo-rg-nrg",
            "virtual_network_name": "AppGwVnet"
          },
          "dependencies": [
            "module.appgw.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.21.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6fa958bc-223c-467f-8f64-6e428588bd06",
            "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/virtualNetworks/AppGwVnet",
            "location": "eastus",
            "name": "AppGwVnet",
            "resource_group_name": "test-neyo-rg-nrg",
            "subnet": [
              {
                "address_prefix": "10.21.0.0/24",
                "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/virtualNetworks/AppGwVnet/subnets/frontAGSubnet",
                "name": "frontAGSubnet"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "aks-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/virtualNetworks/aks-vnet-77731381/virtualNetworkPeerings/AKStoAppGWVnetPeering",
            "name": "AKStoAppGWVnetPeering",
            "remote_virtual_network_id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/virtualNetworks/AppGwVnet",
            "resource_group_name": "test-neyo-rg-nrg",
            "use_remote_gateways": false,
            "virtual_network_name": "aks-vnet-77731381"
          },
          "dependencies": [
            "module.appgw.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "appgw-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/virtualNetworks/AppGwVnet/virtualNetworkPeerings/AppGWtoAKSVnetPeering",
            "name": "AppGWtoAKSVnetPeering",
            "remote_virtual_network_id": "/subscriptions/c7159b76-0836-4a8d-99df-ab0ef217acb0/resourceGroups/test-neyo-rg-nrg/providers/Microsoft.Network/virtualNetworks/aks-vnet-77731381",
            "resource_group_name": "test-neyo-rg-nrg",
            "use_remote_gateways": false,
            "virtual_network_name": "AppGwVnet"
          },
          "dependencies": [
            "module.appgw.azurerm_virtual_network.vnet",
            "module.appgw.data.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    }
  ]
}